feat: added slack token to minikube deployment

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -15,6 +15,7 @@ data:
       leaderElection: true
       metricsSink: {{ .Values.controller.metricsSink | quote }}
       deleteOnly: {{ .Values.controller.deleteOnly }}
+      slackTokenFilePath: {{ .Values.controller.slackTokenFilePath | quote }}
       imagePullSecrets: {{ .Values.images.pullSecrets }}
       webhook:
         {{- if .Values.controller.webhook.generateCert }}
