--- a/chart/install.yaml
+++ b/chart/install.yaml
@@ -44,6 +44,7 @@ data:
       metricsAddr: "127.0.0.1:8080"
       leaderElection: true
       metricsSink: "noop"
+      slackTokenFilePath: "/etc/chaos-slack-token"
       deleteOnly: false
       imagePullSecrets: false
       webhook:
