CHAOS-31: Support durationSeconds in disruption spec (#400)
* CHAOS-31: Add duration with default to disruptions

* interim logic changes

* Delete chaos pods if they were terminated by duration

* Stop requeueing prematurely after injection is done

* clean up the logging

* remove the magic number

* add test that fails because we cant configure the gc yet

* passing test now that we can configure

* allow for configuring outside of the code

* Add comment

* Make duration a duration

* allow for configuration

* Update controllers/disruption_controller.go

Co-authored-by: Joris Bonnefoy <joris.bonnefoy@datadoghq.com>

* add example

Co-authored-by: Joris Bonnefoy <joris.bonnefoy@datadoghq.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,12 @@ jobs:
             sudo chown circleci:circleci /go /usr/local/bin /usr/local/kubebuilder
       - go_restore_cache
       - run:
+          name: Edit controller chart
+          <<: *working_directory
+          command: |
+            sudo snap install yq
+            yq e '.controller.expiredDisruptionGCDelay = "3s"' -i chart/values.yaml
+      - run:
           name: Wait for Docker Daemon to be up and running
           command: |
             for i in 0..9; do
