--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -129,6 +129,9 @@ spec:
               type: array
             dryRun:
               type: boolean
+            durationSeconds:
+              format: int64
+              type: integer
             level:
               description: DisruptionLevel represents which level the disruption should
                 be injected at
