--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -14,8 +14,8 @@ data:
       metricsAddr: "127.0.0.1:8080"
       leaderElection: true
       metricsSink: {{ .Values.controller.metricsSink | quote }}
+      notifierSinks: {{ .Values.controller.notifierSinks }}
       deleteOnly: {{ .Values.controller.deleteOnly }}
-      slackTokenFilePath: {{ .Values.controller.slackTokenFilePath | quote }}
       imagePullSecrets: {{ .Values.images.pullSecrets }}
       webhook:
         {{- if .Values.controller.webhook.generateCert }}
