--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -4,10 +4,10 @@
 # Copyright 2021 Datadog, Inc.
 
 images: # images and tag to pull for each component of the stack
-  controller: docker.io/library/chaos-controller
-  injector: docker.io/library/chaos-injector
-  handler: docker.io/library/chaos-handler
-  tag: latest
+  controller: docker.io/library/chaos-controller:latest
+  injector: docker.io/library/chaos-injector:latest
+  handler: docker.io/library/chaos-handler:latest
+  proxy: gcr.io/kubebuilder/kube-rbac-proxy:v0.4.1
   pullSecrets: false # name of the secret object to use when pulling images
 
 controller:
@@ -25,9 +25,9 @@ injector:
   annotations: {} # extra annotations passed to the chaos injector pods
   serviceAccount: chaos-injector # service account to use for the chaos injector pods
   serviceAccountNamespace: chaos-engineering # namespace where the service account can be found (NOTE: changing this will change the namespace in which the chaos pods are created)
-  dnsDisruption:
-    dnsServer: "8.8.8.8"
-    kubeDns: "off"
+  dnsDisruption: # dns disruption configuration
+    dnsServer: "8.8.8.8" # IP address of the upstream dns server
+    kubeDns: "off" # whether to use kube-dns for DNS resolution (off, internal, all)
   networkDisruption: # network disruption general configuration
     allowedHosts: [] # list of always allowed hosts (even if explicitly blocked by a network disruption)
     # (here's the expected format, all fields are optional)
