Code Review: variable naming
Co-authored-by: Joris Bonnefoy <joris.bonnefoy@datadoghq.com>

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -16,7 +16,7 @@ data:
       metricsSink: {{ .Values.controller.metricsSink | quote }}
       notifiers:
         common:
-          clustername: {{ .Values.controller.notifiers.common.clusterName | quote }}
+          clusterName: {{ .Values.controller.notifiers.common.clusterName | quote }}
         noop:
           enabled: {{ .Values.controller.notifiers.noop.enabled }}
         slack:
