specify new default of preserveunknownfields=false

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -16,6 +16,7 @@ spec:
     shortNames:
     - dis
     singular: disruption
+  preserveUnknownFields: false
   scope: Namespaced
   subresources:
     status: {}
