query_pct -> queryPercent

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -162,7 +162,7 @@ spec:
                         type: string
                       override:
                         type: string
-                      query_pct:
+                      queryPercent:
                         maximum: 100
                         minimum: 0
                         type: integer
