--- a/examples/grpc.yaml
+++ b/examples/grpc.yaml
@@ -18,12 +18,12 @@ spec:
     endpoints:
       - endpoint: /chaos_dogfood.ChaosDogfood/getCatalog # gRPC service endpoint to disrupt
         error: NOT_FOUND # gRPC error code to return instead computed response
-        query_pct: 25 # percentage to affect
+        queryPercent: 25 # percentage to affect
       - endpoint: /chaos_dogfood.ChaosDogfood/getCatalog # gRPC service endpoint to disrupt
         error: ALREADY_EXISTS # gRPC error code to return instead computed response
-        query_pct: 50 # percentage to affect
+        queryPercent: 50 # percentage to affect
       - endpoint: /chaos_dogfood.ChaosDogfood/getCatalog # gRPC service endpoint to disrupt
         override: "{}" # response structure to return instead of computed response - currently only returns emptypb.Empty
       - endpoint: /chaos_dogfood.ChaosDogfood/order # gRPC service endpoint to disrupt
         override: "{}" # response structure to return instead of computed response - currently only returns emptypb.Empty
-        query_pct: 50 # percentage to affect
+        queryPercent: 50 # percentage to affect
