--- a/chart/templates/webhook.yaml
+++ b/chart/templates/webhook.yaml
@@ -102,10 +102,13 @@ webhooks:
     - "chaos.datadoghq.com"
     apiVersions:
     - v1beta1
+    scope: "Namespaced"
     operations:
     - CREATE
+    - UPDATE
     resources:
     - disruptions
+    - disruptions/status
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
