--- a/chart/install.yaml
+++ b/chart/install.yaml
@@ -837,32 +837,6 @@ webhooks:
 ---
 # Source: chaos-controller/templates/webhook.yaml
 apiVersion: admissionregistration.k8s.io/v1beta1
-kind: MutatingWebhookConfiguration
-metadata:
-  annotations:
-    cert-manager.io/inject-ca-from: chaos-engineering/chaos-controller-serving-cert
-  name: chaos-controller-disruption-spec-defaults
-webhooks:
-  - clientConfig:
-      caBundle: Cg==
-      service:
-        name: chaos-controller-webhook-service
-        namespace: chaos-engineering
-        path: /mutate-chaos-datadoghq-com-v1beta1-disruption-spec-defaults
-    failurePolicy: Fail
-    name: chaos-controller-admission-webhook.chaos-engineering.svc
-    rules:
-      - apiGroups:
-          - "chaos.datadoghq.com"
-        apiVersions:
-          - v1beta1
-        operations:
-          - CREATE
-        resources:
-          - disruptions
----
-# Source: chaos-controller/templates/webhook.yaml
-apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
@@ -888,3 +862,35 @@ webhooks:
     - DELETE
     resources:
     - disruptions
+---
+# Source: chaos-controller/templates/webhook.yaml
+apiVersion: admissionregistration.k8s.io/v1beta1
+kind: MutatingWebhookConfiguration
+metadata:
+  annotations:
+  {{- if not .Values.controller.webhook.generateCert }}
+  cert-manager.io/inject-ca-from: chaos-engineering/chaos-controller-serving-cert
+  {{- end }}
+  name: chaos-controller
+webhooks:
+  - clientConfig:
+    {{- if not .Values.controller.webhook.generateCert }}
+    caBundle: Cg==
+    {{- else }}
+    caBundle: {{ b64enc $ca.Cert }}
+    {{- end }}
+    service:
+      name: chaos-controller-webhook-service
+      namespace: chaos-engineering
+      path: /mutate-chaos-datadoghq-com-v1beta1-disruption
+    failurePolicy: Fail
+    name: chaos-controller-webhook-service.chaos-engineering.svc
+    rules:
+      - apiGroups:
+          - chaos.datadoghq.com
+        apiVersions:
+          - v1beta1
+        operations:
+          - CREATE
+        resources:
+          - disruptions
