--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -130,9 +130,8 @@ spec:
               type: array
             dryRun:
               type: boolean
-            durationSeconds:
-              format: int64
-              type: integer
+            duration:
+              type: string
             grpc:
               description: GRPCDisruptionSpec represents a gRPC disruption
               nullable: true
