--- a/chart/install.yaml
+++ b/chart/install.yaml
@@ -88,8 +88,9 @@ spec:
     listKind: DisruptionList
     plural: disruptions
     shortNames:
-    - dis
+      - dis
     singular: disruption
+  preserveUnknownFields: false
   scope: Namespaced
   validation:
     openAPIV3Schema:
@@ -131,8 +132,8 @@ spec:
                       type: string
                     type: array
                 required:
-                - key
-                - operator
+                  - key
+                  - operator
                 type: object
               nullable: true
               type: array
@@ -149,8 +150,8 @@ spec:
               type: array
             count:
               anyOf:
-              - type: integer
-              - type: string
+                - type: integer
+                - type: string
               x-kubernetes-int-or-string: true
             cpuPressure:
               description: CPUPressureSpec represents a cpu pressure disruption
@@ -172,8 +173,8 @@ spec:
                       type: integer
                   type: object
               required:
-              - path
-              - throttling
+                - path
+                - throttling
               type: object
             dns:
               description: DNSDisruptionSpec represents a dns disruption
@@ -192,20 +193,19 @@ spec:
                       value:
                         type: string
                     required:
-                    - type
-                    - value
+                      - type
+                      - value
                     type: object
                 required:
-                - hostname
-                - record
+                  - hostname
+                  - record
                 type: object
               nullable: true
               type: array
             dryRun:
               type: boolean
-            durationSeconds:
-              format: int64
-              type: integer
+            duration:
+              type: string
             grpc:
               description: GRPCDisruptionSpec represents a gRPC disruption
               nullable: true
@@ -219,23 +219,23 @@ spec:
                         type: string
                       error:
                         enum:
-                        - OK
-                        - CANCELED
-                        - UNKNOWN
-                        - INVALID_ARGUMENT
-                        - DEADLINE_EXCEEDED
-                        - NOT_FOUND
-                        - ALREADY_EXISTS
-                        - PERMISSION_DENIED
-                        - RESOURCE_EXHAUSTED
-                        - FAILED_PRECONDITION
-                        - ABORTED
-                        - OUT_OF_RANGE
-                        - UNIMPLEMENTED
-                        - INTERNAL
-                        - UNAVAILABLE
-                        - DATA_LOSS
-                        - UNAUTHENTICATED
+                          - OK
+                          - CANCELED
+                          - UNKNOWN
+                          - INVALID_ARGUMENT
+                          - DEADLINE_EXCEEDED
+                          - NOT_FOUND
+                          - ALREADY_EXISTS
+                          - PERMISSION_DENIED
+                          - RESOURCE_EXHAUSTED
+                          - FAILED_PRECONDITION
+                          - ABORTED
+                          - OUT_OF_RANGE
+                          - UNIMPLEMENTED
+                          - INTERNAL
+                          - UNAVAILABLE
+                          - DATA_LOSS
+                          - UNAUTHENTICATED
                         type: string
                       override:
                         type: string
@@ -244,7 +244,7 @@ spec:
                         minimum: 0
                         type: integer
                     required:
-                    - endpoint
+                      - endpoint
                     type: object
                   type: array
                 port:
@@ -252,16 +252,16 @@ spec:
                   minimum: 1
                   type: integer
               required:
-              - endpoints
-              - port
+                - endpoints
+                - port
               type: object
             level:
               description: DisruptionLevel represents which level the disruption should
                 be injected at
               enum:
-              - pod
-              - node
-              - ""
+                - pod
+                - node
+                - ""
               type: string
             network:
               description: NetworkDisruptionSpec represents a network disruption injection
@@ -278,9 +278,9 @@ spec:
                         type: integer
                       protocol:
                         enum:
-                        - tcp
-                        - udp
-                        - ""
+                          - tcp
+                          - udp
+                          - ""
                         type: string
                     type: object
                   nullable: true
@@ -310,8 +310,8 @@ spec:
                   type: integer
                 flow:
                   enum:
-                  - egress
-                  - ingress
+                    - egress
+                    - ingress
                   type: string
                 hosts:
                   items:
@@ -324,9 +324,9 @@ spec:
                         type: integer
                       protocol:
                         enum:
-                        - tcp
-                        - udp
-                        - ""
+                          - tcp
+                          - udp
+                          - ""
                         type: string
                     type: object
                   nullable: true
@@ -344,8 +344,8 @@ spec:
                       namespace:
                         type: string
                     required:
-                    - name
-                    - namespace
+                      - name
+                      - namespace
                     type: object
                   nullable: true
                   type: array
@@ -366,7 +366,7 @@ spec:
               nullable: true
               type: object
           required:
-          - count
+            - count
           type: object
         status:
           description: DisruptionStatus defines the observed state of Disruption
@@ -380,9 +380,9 @@ spec:
               description: DisruptionInjectionStatus represents the injection status
                 of a disruption
               enum:
-              - NotInjected
-              - PartiallyInjected
-              - Injected
+                - NotInjected
+                - PartiallyInjected
+                - Injected
               type: string
             isInjected:
               type: boolean
@@ -425,9 +425,9 @@ spec:
       type: object
   version: v1beta1
   versions:
-  - name: v1beta1
-    served: true
-    storage: true
+    - name: v1beta1
+      served: true
+      storage: true
 status:
   acceptedNames:
     kind: ""
