--- a/examples/timed_disruption.yaml
+++ b/examples/timed_disruption.yaml
@@ -6,7 +6,7 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: network-drop
+  name: timed-network-drop
   namespace: chaos-demo
 spec:
   level: pod
