--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -12,6 +12,7 @@ images: # images and tag to pull for each component of the stack
 
 controller:
   deleteOnly: false # enable delete-only mode
+  enableSafeguards: true # enable safeguards on targets selection (do not target the node running the controller)
   metricsSink: noop # metrics driver (noop or datadog)
   notifiers:
     common:
