--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -14,6 +14,7 @@ data:
       metricsBindAddr: "127.0.0.1:8080"
       leaderElection: true
       metricsSink: {{ .Values.controller.metricsSink | quote }}
+      enableSafeguards: {{ .Values.controller.enableSafeguards }}
       notifiers:
         common:
           clusterName: {{ .Values.controller.notifiers.common.clusterName | quote }}
