initial working code, design more or so fleshed out

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -285,6 +285,8 @@ spec:
               type: object
             onInit:
               type: boolean
+            safeMode:
+              type: boolean
             selector:
               additionalProperties:
                 type: string
