--- a/chart/templates/sa.yaml
+++ b/chart/templates/sa.yaml
@@ -12,4 +12,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.injector.serviceAccount }}
-  namespace: {{ .Values.injector.serviceAccountNamespace }}
+  namespace: {{ .Values.injector.chaosNamespace }}
