--- a/.golangci.yml
+++ b/.golangci.yml
@@ -26,14 +26,12 @@ linters:
     - godox
     - gofmt
     - goimports
-    - golint
     - goprintffuncname
     - gosec
-    - interfacer
-    - maligned
     - misspell
     - nakedret
     - prealloc
+    - revive
     - rowserrcheck
     - stylecheck
     - unconvert
@@ -47,9 +45,14 @@ issues:
     # gosec
     - Subprocess launch(ed with variable|ing should be audited)
     - Expect file permissions to be 0600 or less
-    - Blacklisted import `crypto/md5`
-    - Use of weak cryptographic primitive
+    - Blocklisted import `crypto/md5`
+    - weak cryptographic primitive
+    - weak random number generator
+    - memory aliasing in for loop
+    - file inclusion via variable
     # stylecheck
     - at least one file in a package should have a package comment
     # golint
     - (comment on exported (method|function|type|const)|should have( a package)? comment|comment should be of the form)
+    # revive
+    - and that stutters
