lint worked in larger docker container with longer time out, reduce both

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ executors:
       # TODO: Publicize the chaos controller ci image to the datadog docker registry
       #- image: datadog/chaos-controller-runner-circle:<< pipeline.parameters.CURRENT_CI_IMAGE >>
       - image: golang:1.16-buster
-    resource_class: large
+    resource_class: medium+
     environment:
       KUBEBUILDER_VERSION: 3.1.0
       KUBEBUILDER_ARCH: amd64
