--- a/chart/install.yaml
+++ b/chart/install.yaml
@@ -62,16 +62,15 @@ data:
         host: ""
         port: 9443
     injector:
-      image: "datadog/chaos-injector:5.0.0"
-      serviceAccount:
-        name: "chaos-injector"
-        namespace: "chaos-engineering"
+      image: "datadog/chaos-injector:5.1.0"
+      serviceAccount: "chaos-injector"
+      chaosNamespace: "chaos-engineering"
       dnsDisruption:
         dnsServer: "8.8.8.8"
         kubeDns: "off"
     handler:
       enabled: true
-      image: "datadog/chaos-handler:5.0.0"
+      image: "datadog/chaos-handler:5.1.0"
       timeout: "1m"
 ---
 # Source: chaos-controller/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -736,7 +735,7 @@ spec:
         - containerPort: 8443
           name: https
       - name: manager
-        image: datadog/chaos-controller:5.0.0
+        image: datadog/chaos-controller:5.1.0
         imagePullPolicy: IfNotPresent
         command:
         - /usr/local/bin/manager
