--- a/grpcdogfood/server/chart/templates/service.yaml
+++ b/grpcdogfood/server/chart/templates/service.yaml
@@ -1,9 +1,25 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "deploy.fullname" . }}
-  labels:
-    {{- include "deploy.labels" . | nindent 4 }}
+  name: {{ .Values.fullname }}
+  {{- with .Values.namespace }}
+  namespace:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+spec:
+  type: {{ .Values.service.type }}
+  ports:
+    - port: {{ .Values.service.port }}
+      targetPort: 50051
+      protocol: TCP
+      name: grpc
+  selector:
+    {{- include "deploy.selectorLabels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.service.name }}
   {{- with .Values.namespace }}
   namespace:
     {{- toYaml . | nindent 4 }}
