--- a/grpcdogfood/client/chart/values.yaml
+++ b/grpcdogfood/client/chart/values.yaml
@@ -1,13 +1,13 @@
-# Default values for deploy.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Unless explicitly stated otherwise all files in this repository are licensed
+# under the Apache License Version 2.0.
+# This product includes software developed at Datadog (https://www.datadoghq.com/).
+# Copyright 2021 Datadog, Inc.
 
 replicaCount: 1
 
 image:
   repository: "docker.io/chaos-dogfood-client"
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
 imagePullSecrets: []
